--- a/resources/assets/css/libs/styles.css
+++ b/resources/assets/css/libs/styles.css
@@ -151,70 +151,6 @@ span.round-tab:hover {
 }
 
 
-/* according menu */
-#accordion-container {
-    font-size:13px
-}
-.accordion-header {
-    font-size:13px;
-    background:#ebebeb;
-    margin:5px 0 0;
-    padding:7px 20px;
-    cursor:pointer;
-    color:#fff;
-    font-weight:400;
-    -moz-border-radius:5px;
-    -webkit-border-radius:5px;
-    border-radius:5px
-}
-.unselect_img{
-    width:18px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-.active-header {
-    -moz-border-radius:5px 5px 0 0;
-    -webkit-border-radius:5px 5px 0 0;
-    border-radius:5px 5px 0 0;
-    background:#F53B27;
-}
-.active-header:after {
-    content:"\f068";
-    font-family:'FontAwesome';
-    float:right;
-    margin:5px;
-    font-weight:400
-}
-.inactive-header {
-    background:#333;
-}
-.inactive-header:after {
-    content:"\f067";
-    font-family:'FontAwesome';
-    float:right;
-    margin:4px 5px;
-    font-weight:400
-}
-.accordion-content {
-    display:none;
-    padding:20px;
-    background:#fff;
-    border:1px solid #ccc;
-    border-top:0;
-    -moz-border-radius:0 0 5px 5px;
-    -webkit-border-radius:0 0 5px 5px;
-    border-radius:0 0 5px 5px
-}
-.accordion-content a{
-    text-decoration:none;
-    color:#333;
-}
-.accordion-content td{
-    border-bottom:1px solid #dcdcdc;
-}
-
 
 
 @media( max-width : 585px ) {
@@ -242,5 +178,19 @@ span.round-tab:hover {
         position: absolute;
         left: 35%;
     }
+}
+
+/* Make Select2 boxes match Bootstrap3 heights: */
+.select2-selection__rendered {
+    line-height: 32px !important;
+}
+
+.select2-selection {
+    height: 34px !important;
+}
+
+/* https://xcellerant.net/2015/09/17/fixing-the-width-of-a-select-2-with-a-long-value-in-a-bootstrap-form-group-or-input-group/ */
+.form-group .select2-container {
+    width: 100% !important;
 }
 
