--- a/public/css/libs.css
+++ b/public/css/libs.css
@@ -9102,5 +9102,19 @@ span.round-tab:hover {
     width: 100% !important;
 }
 
+#chat-window
+{
+    height: 400px;
+    border-left: solid 1px lightgray;
+    border-right: solid 1px lightgray;
+}
+
+/*.swal2-popup .swal2-content{*/
+    /*font-size: 14px !important;*/
+/*}*/
+
+.swal2-popup {
+    font-size: 1.5rem !important;
+}
 
 /*# sourceMappingURL=libs.css.map */
