--- a/resources/assets/css/libs/styles.css
+++ b/resources/assets/css/libs/styles.css
@@ -194,3 +194,17 @@ span.round-tab:hover {
     width: 100% !important;
 }
 
+#chat-window
+{
+    height: 400px;
+    border-left: solid 1px lightgray;
+    border-right: solid 1px lightgray;
+}
+
+/*.swal2-popup .swal2-content{*/
+    /*font-size: 14px !important;*/
+/*}*/
+
+.swal2-popup {
+    font-size: 1.5rem !important;
+}
