--- a/public/css/libs.css
+++ b/public/css/libs.css
@@ -9116,3 +9116,23 @@ span.round-tab:hover {
 .swal2-popup {
     font-size: 1.5rem !important;
 }
+
+ul{
+    list-style: none;
+    padding-left: 10px;
+}
+
+
+
+.card-display .nav-tabs { border-bottom: 2px solid #DDD; }
+.card-display .nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover { border-width: 0; }
+.card-display .nav-tabs > li > a { border: none; color: #666; }
+.card-display .nav-tabs > li.active > a, .nav-tabs > li > a:hover { border: none; color: #4285F4 !important; background: transparent; }
+.card-display .nav-tabs > li > a::after { content: ""; background: #4285F4; height: 2px; position: absolute; width: 100%; left: 0px; bottom: -1px; transition: all 250ms ease 0s; transform: scale(0); }
+.card-display .nav-tabs > li.active > a::after, .nav-tabs > li:hover > a::after { transform: scale(1); }
+.card-display .tab-nav > li > a::after { background: #21527d none repeat scroll 0% 0%; color: #fff; }
+.card-display .tab-pane { padding: 15px 0; }
+.card-display .tab-content{padding:20px}
+
+.card {background: #FFF none repeat scroll 0% 0%; box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3); margin-bottom: 30px; }
+/*body{ background: #EDECEC; padding:50px}*/
